Extracting UI colors as variables and inject them into TailwindCSS configuration.

--- a/assets/css/_vars.scss
+++ b/assets/css/_vars.scss
@@ -1,1 +1,10 @@
 $plus-jakarta-sans-font: 'Plus Jakarta Sans', sans-serif;
+
+// colors extracted from the UI
+$primary-color: #3563E9;
+$secondary-color: #1A202C;
+$bg-color: #F6F7F9;
+$bg-label: #90A3BF;
+$bg-heart-icon-active: #ED3F3F;
+$bg-heart-icon-default: #596780;
+$bg-heart-icon-border: #90A3BF;
