Header component, renaming css variables.

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -2,15 +2,20 @@
 :root {
 	--plus-jakarta-sans-font: #{$plus-jakarta-sans-font};
 	--primary-color: #{$primary-color};
-	--secondary-color: #{secondary-color};
-	--bg-color: #{bg-color};
-	--bg-label: #{bg-label};
-	--bg-heart-icon-active: #{bg-heart-icon-active};
-	--bg-heart-icon-default: #{bg-heart-icon};
-	--bg-heart-icon-border: #{bg-heart-icon-border};
+	--primary-light: #{$primary-light};
+	--secondary-color: #{$secondary-color};
+	--tertiary-color: #{$tertiary-color};
+	--label-color: #{$label-color};
+	--heart-icon-active-color: #{$heart-icon-active-color};
+	--icon-default-color: #{$icon-default-color};
+	--heart-icon-border-color: #{$heart-icon-border-color};
 }
 
 // Applying the Plus Jakarta Sans font
 * {
 	font-family: $plus-jakarta-sans-font;
+}
+
+body {
+	background-color: $tertiary-color;
 }
