Hero Section, HeroCard component

--- a/assets/css/_vars.scss
+++ b/assets/css/_vars.scss
@@ -2,7 +2,7 @@ $plus-jakarta-sans-font: 'Plus Jakarta Sans', sans-serif;
 
 // colors extracted from the UI
 $primary-color: #3563E9;
-$primary-light: #8ba8ff;
+$primary-light: #54A6FF;
 $secondary-color: #1A202C;
 $tertiary-color: #F6F7F9;
 $label-color: #90A3BF;
